--- a/style.css
+++ b/style.css
@@ -6,6 +6,16 @@ body {
     padding: 0;
 }
 
+#cabecera{
+    background: #33A;
+    box-shadow: -webkit-box-shadow: 15px 10px 29px 21px rgba(0,0,0,0.75);
+    -moz-box-shadow: 15px 10px 29px 21px rgba(0,0,0,0.75);
+    box-shadow: 15px 10px 29px 21px rgba(0,0,0,0.75);;
+    color: white;
+    margin:0;
+    padding: 0.5em;
+}
+
 #container{
     width: 70%;
     padding: 1em;
